Add segmented contrl for approve/capture order
Signed-off-by: Matt Wylder <mwylder@paypal.com>

--- a/PayPalSDKSample/Base.lproj/Main.storyboard
+++ b/PayPalSDKSample/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,6 +23,13 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="160" translatesAutoresizingMaskIntoConstraints="NO" id="S5C-En-gkr">
                                 <rect key="frame" x="0.0" y="637" width="414" height="225"/>
                                 <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ugR-ps-pbW">
+                                        <rect key="frame" x="207" y="110" width="0.0" height="0.0"/>
+                                        <segments>
+                                            <segment title="AUTHORIZE"/>
+                                            <segment title="CAPTURE"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGO-7E-8ce">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="31"/>
                                         <state key="normal" title="Button"/>
@@ -53,6 +61,7 @@
                     <connections>
                         <outlet property="activityIndicator" destination="syt-LW-omG" id="uuy-Tq-il0"/>
                         <outlet property="cardCheckoutButton" destination="rGO-7E-8ce" id="E1N-pW-vbn"/>
+                        <outlet property="intentSegmentedControl" destination="ugR-ps-pbW" id="8ti-Vp-qr9"/>
                         <outlet property="statusTextField" destination="rKi-vT-9sT" id="EtF-C5-0UR"/>
                     </connections>
                 </viewController>
