Fix stackView spacing to prevent button text from cropping

--- a/PayPalSDKSample/Base.lproj/Main.storyboard
+++ b/PayPalSDKSample/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="syt-LW-omG">
                                 <rect key="frame" x="197" y="289" width="20" height="318"/>
                             </activityIndicatorView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="160" translatesAutoresizingMaskIntoConstraints="NO" id="S5C-En-gkr">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="S5C-En-gkr">
                                 <rect key="frame" x="0.0" y="637" width="414" height="225"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ugR-ps-pbW">
