--- a/PayPalSDKSample/Base.lproj/Main.storyboard
+++ b/PayPalSDKSample/Base.lproj/Main.storyboard
@@ -18,13 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="syt-LW-omG">
-                                <rect key="frame" x="197" y="289" width="20" height="318"/>
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                             </activityIndicatorView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="S5C-En-gkr">
-                                <rect key="frame" x="0.0" y="637" width="414" height="225"/>
+                                <rect key="frame" x="0.0" y="488" width="414" height="374"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ugR-ps-pbW">
-                                        <rect key="frame" x="207" y="110" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="112.5" y="0.0" width="189" height="32"/>
                                         <segments>
                                             <segment title="AUTHORIZE"/>
                                             <segment title="CAPTURE"/>
@@ -34,15 +34,23 @@
                                         </connections>
                                     </segmentedControl>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGO-7E-8ce">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="31"/>
+                                        <rect key="frame" x="138" y="111" width="138" height="34.5"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Card Checkout"/>
                                         <connections>
                                             <action selector="cardCheckoutTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lhb-PK-nL4"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzi-gM-m63">
+                                        <rect key="frame" x="112" y="225.5" width="190.5" height="34.5"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="PayPal Web Checkout"/>
+                                        <connections>
+                                            <action selector="paypalWebCheckoutTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XUi-Ky-xdr"/>
+                                        </connections>
+                                    </button>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Status ..." borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rKi-vT-9sT">
-                                        <rect key="frame" x="0.0" y="191" width="414" height="34"/>
+                                        <rect key="frame" x="164" y="340" width="86" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -65,6 +73,7 @@
                         <outlet property="activityIndicator" destination="syt-LW-omG" id="uuy-Tq-il0"/>
                         <outlet property="cardCheckoutButton" destination="rGO-7E-8ce" id="E1N-pW-vbn"/>
                         <outlet property="intentSegmentedControl" destination="ugR-ps-pbW" id="8ti-Vp-qr9"/>
+                        <outlet property="paypalCheckoutButton" destination="Hzi-gM-m63" id="D4Q-ef-mqk"/>
                         <outlet property="statusTextField" destination="rKi-vT-9sT" id="EtF-C5-0UR"/>
                     </connections>
                 </viewController>
